# finalproject_Trofimenko_Artem_m25-555

./: .gitignore  README.md  finalPythonProject.cast  main.py  pyproject.toml
data/: exchange_rates.json  portfolios.json  rates.json  session.json  users.json
valutatrade_hub/: decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py
valutatrade_hub/infra/: settings.py
valutatrade_hub/parser_service/: api_clients.py  config.py  sheduler.py  storage.py  updater.py
