[project]
name = "finalproject-trofimenko-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
     { include = "valutatrade_hub" },
]

[tool.poetry.scripts]
project = "main:main" 

[tool.ruff]
line-length = 155
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.10,<0.15.0"

[tool.valutatrade]
DATA_DIR = "data"
USERS_JSON = "data/users.json"
PORTFOLIOS_JSON = "data/portfolios.json"
RATES_JSON = "data/rates.json"
SESSION_JSON = "data/session.json"
RATES_TTL_SECONDS = 300
BASE_CURRENCY = "USD"
LOG_DIR = "logs"
LOG_LEVEL = "INFO"
LOG_FORMAT = "%(levelname)s %(asctime)s %(message)s"

